# LDT

./: .gitignore  .lintr  CMakeLists.txt  CMakePresets.json  LDT-vscode.natvis  LDT.natvis  NEWS.md  README.md
Rpackage/: .Rbuildignore  .Rprofile  .gitignore  DESCRIPTION  NEWS.md
Rpackage/R/: bin.R  clustering.R  data.R  dc.R  frequency.R  g.plots.R  g.prints.R  g.regression.R  g.summary.R  generic.R  helpers.R  latex.R  ldt_init.R  ldt_survey.R  options.R  plots.R  r-func.R  search.R  statistics.R  steps.R  sur.R  variable.R  varma.R
Rpackage/data/: data.berka.rda  data.pcp.rda  data.wdi.rda  vig_data.rda
Rpackage/data-raw/: data-berka.R  data-pcp.R  data-wdi.R
Rpackage/inst/: REFERENCES.bib
Rpackage/man-roxygen/: ex-estim.bin.R  ex-estim.dc.R  ex-estim.sur.R  ex-estim.varma.R  ex-s.pca.R  ex-search.bin.R  ex-search.dc.R  ex-search.sur.R  ex-search.varma.R  ex-sim.bin.R  ex-sim.dc.R  ex-sim.sur.R  ex-sim.varma.R
Rpackage/src/: Makevars  r_clustering.cpp  r_dc.cpp  r_frequency.cpp  r_func.cpp  r_ldt.cpp  r_ldt.h  r_options.cpp  r_statistics.cpp  r_sur.cpp  r_variable.cpp  r_varma.cpp
Rpackage/tests/testthat/: test-bin.R  test-data.R  test-generic.R  test-r-func.R  test-r_clustering.R  test-r_dc.R  test-r_frequency.R  test-r_generics.R  test-r_statistics.R  test-r_sur.R  test-r_variable.R  test-r_varma.R  test-statistics.R  test-sur.R  test-varma.R
Rpackage/vignettes/: bin.Rmd  dc.Rmd  dc_default.Rmd  dc_fraud.Rmd  ldt.bib  sur.Rmd  sur_growth.Rmd  sur_simulation.Rmd  varma.Rmd  varma_pcp.Rmd
Rpackage_F/: .gitignore  DESCRIPTION
Rpackage_F/R/: convert.R  data.R  frequency.R  generics_f.R  helpers.R  init.R  variable.R
Rpackage_F/data/: oil_price.rda
Rpackage_F/src/: Makevars  r_convert.cpp  r_frequency.cpp  r_helpers.cpp  r_tsExtra.h  r_tsdata.h  r_variable.cpp
Rpackage_F/tests/: testthat.R
Rpackage_F/tests/testthat/: test-convert.R  test-frequency.R  test-helpers.R  test-variable.R
Rpackage_F/vignettes/: tdata.bib  time_and_data.Rmd
include/: api.h  array.h  frequency.h  helpers.h  ldt_base.h  matrix.h  matrix_utils.h  variable.h
include/blas/: blas.h  lapack.h
include/math/: functionx.h  lbfgsb.h  optimization.h  polynomial.h
include/math/statistics/: clustering.h  correlation.h  data_split.h  distributions.h  pca.h  running.h  scoring.h  statistics.h
include/math/statistics/inference/: searchers.h
include/math/statistics/inference/models/: discrete_choice.h  rprog.h  smoothing.h  sur.h  varma.h
src/: api.cpp  array.cpp  helpers.cpp  ldt_base.cpp
src/frequency/: f_base.cpp  f_cross_section.cpp  f_day_based.cpp  f_list.cpp  f_week_based.cpp  f_year_based.cpp
src/ldt_math/: auc.cpp  derivative.cpp
src/ldt_math/optimization/: lmbfgsb.cpp  nelder_mead.cpp  newton.cpp
src/ldt_math/optimization/lbfgsb/: Readme.md  lbfgsb.c  linesearch.c  linpack.c  miniCBLAS.c  print.c  subalgorithms.c  timer.c
src/ldt_math/polynomials/: mpolynomial.cpp  polynomial.cpp
src/ldt_statistics/: correlation.cpp  data_split.cpp  pca.cpp
src/ldt_statistics/clustering/: distance.cpp  group_data.cpp  hcluster.cpp
src/ldt_statistics/distributions/: distribution_gld.cpp  distributions_uni.cpp  empirical103.cpp  histogram.cpp  mixture.cpp  mnormal.cpp
src/ldt_statistics/modeling/R/: rfunc_modelset.cpp
src/ldt_statistics/modeling/discrete/: discrete_choice.cpp  discrete_choice_extended.cpp  discrete_choice_modelset.cpp  discrete_choice_sim.cpp
src/ldt_statistics/modeling/linear/: sur.cpp  sur_extended.cpp  sur_modelset.cpp  sur_projection.cpp  sur_simulation.cpp
src/ldt_statistics/modeling/search/: modelset.cpp  searcher.cpp  searcher_reg.cpp  summary.cpp
src/ldt_statistics/modeling/time_series/: expsmoothing.cpp  tsfilter.cpp
src/ldt_statistics/modeling/time_series/varma/: varma.cpp  varma_arma.cpp  varma_extended.cpp  varma_forecast.cpp  varma_modelset.cpp  varma_restriction.cpp  varma_simulation.cpp  (+1 more)
src/ldt_statistics/running/: weighted4.cpp  weighted_mean.cpp  weighted_variance.cpp
src/ldt_statistics/scoring/: auc.cpp  cost_matrix.cpp  frequency_cost.cpp  roc.cpp  scoring.cpp
src/ldt_statistics/statistics/: descriptive.cpp  statistics.cpp
src/matrix/: dataset.cpp  decompositions.cpp  matrix.cpp  matrix_la.cpp  matrix_sym.cpp  vmatrix.cpp
src/variable/: variable.cpp  variables.cpp
test/: array_t.cpp  cluster_t.cpp  correlation_t.cpp  data_split_t.cpp  discrete_choice_t.cpp  distance_t.cpp  distributions_t.cpp  frequency_t.cpp  functionx_t.cpp  matrix_t.cpp  optimization_t.cpp  pca_t.cpp  polynomial_t.cpp  running_t.cpp  scoring_t.cpp  searcher_t.cpp  statistics_t.cpp  sur_t.cpp  variable_t.cpp  varma_t.cpp
tsExtra.Rcheck/: 00install.out  tsExtra-Ex.R  tsExtra-Ex.Rout  tsExtra-Ex.timings
tsExtra.Rcheck/00_pkg_src/tsExtra/: DESCRIPTION
tsExtra.Rcheck/00_pkg_src/tsExtra/R/: RcppExports.R  frequency.R  generics.R  init.R  variable.R
tsExtra.Rcheck/00_pkg_src/tsExtra/man/: BindVariables.Rd  F_CrossSection.Rd  F_Daily.Rd  F_DailyInWeek.Rd  F_Hourly.Rd  F_ListDate.Rd  F_ListString.Rd  F_Minutely.Rd  F_Monthly.Rd  F_MultiDaily.Rd  F_MultiWeekly.Rd  F_MultiYearly.Rd  F_Quarterly.Rd  F_Secondly.Rd  F_Weekly.Rd  F_XTimesADay.Rd  F_XTimesAYear.Rd  F_XTimesZYears.Rd  F_Yearly.Rd  Variable.Rd  VariableToString.Rd  as.character.ldtf.Rd  as.ldtf.Rd  get.character.info.Rd  get.class.id.Rd  seq.Rd  seq0.Rd
tsExtra.Rcheck/00_pkg_src/tsExtra/src/: RcppExports.cpp  f_base.cpp  f_cross_section.cpp  f_day_based.cpp  f_week_based.cpp  f_year_based.cpp  frequency.h  helpers.cpp  helpers.h  ldt_base.h  r_frequency.cpp  r_variable.cpp  variable.cpp  variable.h  variables.cpp
tsExtra.Rcheck/00_pkg_src/tsExtra/tests/: testthat.R
tsExtra.Rcheck/tests/: testthat.Rout.fail
tsExtra.Rcheck/tsExtra/: DESCRIPTION  INDEX  NAMESPACE
tsExtra.Rcheck/tsExtra/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
tsExtra.Rcheck/tsExtra/R/: tsExtra.rdb  tsExtra.rdx
tsExtra.Rcheck/tsExtra/help/: AnIndex  aliases.rds  paths.rds  tsExtra.rdb  tsExtra.rdx
tsExtra.Rcheck/tsExtra/html/: 00Index.html
tsExtra.Rcheck/tsExtra/libs/x64/: symbols.rds
